--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           action=""
           method="post"
         >
-          <div class="item">
+          <div>
             <label for="location">Location:</label>
             <input
               type="text"
@@ -59,7 +59,7 @@
             />
           </div>
 
-          <div class="item">
+          <div>
             <label for="arrive">Arrive:</label>
             <input
               type="date"
@@ -68,7 +68,7 @@
             />
           </div>
 
-          <div class="item">
+          <div>
             <label for="depart">Depart:</label>
             <input
               type="date"
@@ -77,7 +77,7 @@
             />
           </div>
 
-          <div class="item">
+          <div>
             <label for="type">Type:</label>
             <select
               name="type"
@@ -93,9 +93,7 @@
             </select>
           </div>
 
-          <div class="item">
-            <button>Search</button>
-          </div>
+          <button>Search</button>
         </form>
       </section>
 
